--- a/QLTV_GUI/QLTV_GUI.vbproj
+++ b/QLTV_GUI/QLTV_GUI.vbproj
@@ -78,6 +78,18 @@
     <Compile Include="Frm_Main.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Frm_ThemTacGia.Designer.vb">
+      <DependentUpon>Frm_ThemTacGia.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_ThemTacGia.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_ThemTheLoaiSach.Designer.vb">
+      <DependentUpon>Frm_ThemTheLoaiSach.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_ThemTheLoaiSach.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -93,13 +105,31 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Frm_ThemSach.Designer.vb">
+      <DependentUpon>Frm_ThemSach.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_ThemSach.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Frm_Main.resx">
+      <DependentUpon>Frm_Main.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_ThemTacGia.resx">
+      <DependentUpon>Frm_ThemTacGia.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_ThemTheLoaiSach.resx">
+      <DependentUpon>Frm_ThemTheLoaiSach.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_ThemSach.resx">
+      <DependentUpon>Frm_ThemSach.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -113,6 +143,20 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QLTV_BUS\QLTV_BUS.vbproj">
+      <Project>{49747be3-427e-4505-982f-0633c19a2c00}</Project>
+      <Name>QLTV_BUS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QLTV_DTO\QLTV_DTO.vbproj">
+      <Project>{62b9f6e4-15d9-4f61-b534-30473d749321}</Project>
+      <Name>QLTV_DTO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utility\Utility.vbproj">
+      <Project>{5c674f35-83b8-42bb-b727-ac0b83858207}</Project>
+      <Name>Utility</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
