--- a/QLTV_GUI/QLTV_GUI.vbproj
+++ b/QLTV_GUI/QLTV_GUI.vbproj
@@ -78,6 +78,18 @@
     <Compile Include="Frm_Main.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Frm_QLDocGia.Designer.vb">
+      <DependentUpon>Frm_QLDocGia.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_QLDocGia.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_QLLoaiDocGia.Designer.vb">
+      <DependentUpon>Frm_QLLoaiDocGia.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_QLLoaiDocGia.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Frm_ThemDocGia.designer.vb">
       <DependentUpon>Frm_ThemDocGia.vb</DependentUpon>
     </Compile>
@@ -109,6 +121,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Frm_Main.resx">
       <DependentUpon>Frm_Main.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_QLDocGia.resx">
+      <DependentUpon>Frm_QLDocGia.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_QLLoaiDocGia.resx">
+      <DependentUpon>Frm_QLLoaiDocGia.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_ThemDocGia.resx">
       <DependentUpon>Frm_ThemDocGia.vb</DependentUpon>
